@@ -98,6 +98,12 @@ bowtie_map_nonTRNA_reads_phix:
     cpus-per-task: 1
     mem-per-cpu: 40000
     
+samtools_concatenated_reads_tRNA_flagstats:
+    job-name: samtools_concatenated_reads_tRNA_flagstats
+    time: 300
+    cpus-per-task: 1
+    mem-per-cpu: 32000
+
 # Module 4 - Alignments
 ################################################################################
 bowtie_map_clear_reads_mature:
